# SkyCareLink

./: .env  .replit  .replit_consumer  CONSUMER_TESTING_SUMMARY.md  LEGAL_COPY_IMPLEMENTATION_COMPLETE.md  REACT_DASHBOARD_REBUILD_GUIDE.md  README-GO-LIVE.md  README.md  SECURITY_IMPLEMENTATION_COMPLETE.md  TESTING_FRAMEWORK_COMPLETE.md  app.py  config.py  consumer_app.py  consumer_app_updated.py  consumer_main.py  consumer_main_final.py  cookies.txt  debug_csrf.py  debug_summary.md  main.py  models.py  package-lock.json  package.json  pyproject.toml  quote_app.py  replit.md  seed_data.py  serve_dashboard.py  test_cookies.txt  test_cookies_provider.txt  test_document_audit.py  test_login_debug.py  test_notifications.py  test_notifications_direct.py  test_runtime_10b.py  test_security_audit.py
archive/: consumer_intake_pre_phase12.html  consumer_main_final_phase7j_backup_1754801488.py  consumer_main_final_phase7k_backup_1754802716.py  consumer_main_final_phase7m_backup_1754803750.py  consumer_main_final_pre_7e.py  phase9c_backup.md  phase9f_backup.md
attached_assets/: Pasted-1-Flask-Jinja-replace-the-hero-in-templates-main-index-html-Replace-everything-inside-block-co-1755451816957_1755451816958.txt  Pasted-1-Site-audit-UX-tightening-no-dead-clicks-compact-pancake-Objective-Eliminate-dead-buttons--1755402904332_1755402904332.txt  Pasted-10-End-to-end-test-harness-launch-runbook-triple-check-Objective-Ship-a-repeatable-test-plan-w-1755403515207_1755403515208.txt  (+43 more)
consumer_templates/: 404.html  500.html  admin_affiliates.html  admin_analytics_affiliates.html  (+92 more)
(+187 files in other folders)
